--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>~/pedrosantiago.com.br/main.php</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/logo@180x180.png" />
-    <meta name="apple-mobile-web-app-title" content="<%= htmlWebpackPlugin.options.title %>" />
+    <meta name="apple-mobile-web-app-title" content="~/pedrosantiago.com.br/main.php" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="#272822" />
 
@@ -15,7 +15,7 @@
 
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#272822" />
-    <meta name="application-name" content="<%= htmlWebpackPlugin.options.title %>" />
+    <meta name="application-name" content="~/pedrosantiago.com.br/main.php" />
     <meta name="msapplication-config" content="/browserconfig.xml" />
 
     <meta
@@ -276,5 +276,6 @@
       rel="stylesheet"
       href="https://cdn.rawgit.com/tonsky/FiraCode/1.204/distr/fira_code.css"
     />
+    <script type="module" src="/index.ts"></script>
   </body>
 </html>
