--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
     <meta
       name="description"
-      content="Portfolio of Pedro Oliveira - CTO as a Service & PHP Specialist"
+      content="Portfolio of Pedro Santiago - CTO as a Service & PHP Specialist"
     />
     <meta
       name="keywords"
@@ -47,12 +47,13 @@
         --color-white-space: #464741;
         --color-collapsed: #464741;
         --color-comment: #75715e;
-        --color-variable: #f8f8f2;
+        --color-variable: #fd971f;
         --color-expression: #f8f8f2;
         --color-storage-type: #66d9ef;
         --color-keyword: #f92672;
-        --color-type: #a6e22e;
+        --color-type: #66d9ef;
         --color-class: #a6e22e;
+        --color-function: #a6e22e;
         --color-string: #e6db74;
         --color-constant: #ae81ff;
         --color-number: #ae81ff;
@@ -269,7 +270,7 @@
 
       window._gaq = [];
       _gaq.push(['_setAccount', 'UA-29865051-1']);
-      _gaq.push(['_setDomainName', 'tamino.dev']);
+      _gaq.push(['_setDomainName', 'pedrosantiago.com.br']);
       _gaq.push(['_trackPageview']);
     </script>
     <link
